# lb

./: .buildinfo  .gitignore  LICENSE  README.md  api.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: api.doctree  environment.pickle  index.doctree  installation.doctree
.github/workflows/: publish-pkg.yml  publish.yml
_dev/: fs.ipynb  hello.ipynb  hello.py  read_md_to_df.ipynb  snippets.md  tags.ipynb  tester.ipynb
_modules/: index.html
_modules/lb/core/: fs.html  xml.html
_modules/lb/docx/: docx.html
_sources/: api.md.txt
data/markdown/: test.md  test2.md
docs/: conf.py  index.md  installation.md  mkdocs.yml
docs/docs/: getting-started.md  index.md
lb/: __init__.py
lb/core/: core.py  fs.py  hello.py  xml.py
lb/docx/: __init__.py  docx.py
lb/markdown/: md_to_df_str.py
