[tool.poetry]
name = "lb"
version = "0.0.1"
description = "Lightbridge-KS Personal Python Package"
authors = ["Lightbridge-KS <ki11ip0.s.a.s@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Lightbridge-KS/lb"
repository = "https://github.com/Lightbridge-KS/lb"
exclude = ["_dev", "_archive"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
python-docx = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^6.0.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.49"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "*"